--- a/TankstellenProjekt_M226/TankstellenProjekt_M226/App.xaml
+++ b/TankstellenProjekt_M226/TankstellenProjekt_M226/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TankstellenProjekt_M226"
-             StartupUri="TankstellenProjekt_M226.view.MainWindow.xaml">
+             StartupUri="view/kasse.xaml">
     <Application.Resources>
          
     </Application.Resources>
